update to props

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-smtphost=
-smtpport=
-hostemail=
-hostpassword=
+smtphost=smtp.gmail.com
+smtpport=587
+hostemail=slcegauge@gmail.com
+hostpassword=egaugeemail123
 
-captchasitekey=
-captchasecretkey=
+captchasitekey=6Lf1kBMUAAAAAMw1gkmD2_8QlvBeTg5OAJ6IB6Cm
+captchasecretkey=6Lf1kBMUAAAAABS-hCru0qZbubGtV--BAo1d2br6
 
-baseurl=
+baseurl=http://localhost:8080/
